# hipaa-privacy-guardrail

./: .gitignore  DEPLOY.md  README.md  docker-compose.yml  package-lock.json  render.yaml
gateway/: .dockerignore  .env.example  .gitignore  CREDITS.md  Dockerfile  README.md  pyproject.toml
gateway/app/: __init__.py  config.py  dependencies.py  main.py
gateway/app/audit/: __init__.py  logger.py  models.py  reader.py
gateway/app/auth/: __init__.py  security.py
gateway/app/compliance/: __init__.py  engine.py  masker.py  overlap.py  policy.py  streaming.py  types.py  vault.py
gateway/app/db/: __init__.py  history.py  models.py  pool.py  schema.sql  users.py
gateway/app/history/: __init__.py  sink.py
gateway/app/ingest/: __init__.py  extract.py
gateway/app/middleware/: __init__.py  auth.py  logging.py  metrics.py  request_context.py
gateway/app/observability/: __init__.py  metrics.py
gateway/app/providers/: __init__.py  base.py  claude.py  deepseek.py  gemini.py  ollama.py  openai.py  router.py
gateway/app/routers/: admin.py  analyze.py  auth.py  chat.py  dashboard.py  health.py  history.py
gateway/app/utils/: http.py  (+2 more)
gateway/policies/: default.yaml  dpdp.yaml  gdpr.yaml  healthcare.yaml  hipaa.yaml  pci-dss.yaml
gateway/tests/: conftest.py  test_admin_metrics.py  test_analyze_endpoint.py  test_audit.py  test_auth.py  test_chat_endpoint.py  test_cors.py  test_detectors.py  test_engine.py  test_file_upload.py  test_hardening.py  test_health.py  test_history.py  test_presidio.py  test_providers.py  test_scan_meta.py  test_streaming.py  test_vault.py
(+48 files in other folders)
